fixed input alignment

--- a/css/style.css
+++ b/css/style.css
@@ -29,13 +29,31 @@
 
 body {
   height: 100%;
-  width: 100%;
+  width: fit-content;
   background-color: var(--secondary-1-3);
+  padding: 0;
+  margin: 0 0;
 }
 
 body a, a:hover, a:visited, a:active {
     color: inherit;
     text-decoration: none;
+}
+
+form ul li input {
+  display: block;
+  float: right;
+  align-content: normal;
+  justify-content: right;
+  position: relative;
+}
+
+form ul li label {
+  display: block;
+  float: left;
+  align-content: normal;
+  justify-content: right;
+  position: relative;
 }
 
 
@@ -48,10 +66,12 @@ body a, a:hover, a:visited, a:active {
     background-size: cover;
     width: 100%;
     height: 100%;
+    margin: 0 0;
+    padding: 0;
   }
     
   header {
-    width: 100%;
+    width: fit-content;
     height: 600px;
     margin: 0 0;
     display: block;
@@ -85,6 +105,18 @@ body a, a:hover, a:visited, a:active {
     background-size: cover;
     height: 100%;
     width: 100%;
+    margin: 0 0;
+    padding: 0;
+  }
+
+  #input_wrapper #inputs form ul li #mailing-list {
+    width: 30px;
+    height: 30px;
+    padding: 0;
+    margin:0;
+    position: relative;
+    overflow: hidden;
+    float: right;
   }
     
   #input_wrapper {
@@ -108,6 +140,8 @@ body a, a:hover, a:visited, a:active {
     list-style: none;
     display: block;
     float: left;
+    position: relative;
+    overflow: hidden;
   }
     
   form ul li {
@@ -120,9 +154,14 @@ body a, a:hover, a:visited, a:active {
   }
 
   form ul li input {
-    width: 95%;
-    max-width: 95%;
-    float: left;
+    width: 70%;
+    max-width: 70%;
+    padding-left: 20px;
+  }
+
+  form ul li label {
+    width: 60%;
+    padding-right: 40px;
   }
     
   #submit {
@@ -146,7 +185,9 @@ body a, a:hover, a:visited, a:active {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    width: 100%;
+    width: fit-content;
+    margin: 0 0;
+    padding: 0;
   }
     
   #third_image_wrapper #third_image p {
@@ -157,8 +198,8 @@ body a, a:hover, a:visited, a:active {
     margin: 0 0;
     padding: 30px;
     background-color: var(--complement-4);
-    width: 100%;
-    height: 100%;
+    width: 80%;
+    height: 80%;
   }
     
   #final_picture_wrapper {
@@ -169,6 +210,8 @@ body a, a:hover, a:visited, a:active {
     background-size: cover;
     width: 100%;
     height: 100%;
+    margin: 0 0;
+    padding: none;
   }
     
   #final_picture_wrapper #final_picture {
@@ -236,7 +279,16 @@ body a, a:hover, a:visited, a:active {
     background-size: cover;
     height: 100%;
     width: 100%;
-    height: 100%;
+  }
+
+  #input_wrapper #inputs form ul li #mailing-list {
+    width: 30px;
+    height: 30px;
+    padding: 0;
+    margin:0;
+    position: relative;
+    overflow: hidden;
+    float: right;
   }
 
   #input_wrapper {
@@ -260,20 +312,27 @@ body a, a:hover, a:visited, a:active {
     list-style: none;
     display: block;
     float: left;
-    width: 100%;
+    width: 90%;
+    position: relative;
+    overflow: hidden;
   }
 
   form ul li {
     color: var(--secondary-1-0);
     font-size: 175%;
     font-family: 'exo', Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    width: 100%;
+    width: 90%;
   }
 
   form ul li input {
-    width: 95%;
-    max-width: 95%;
-    float: left;
+    width: 90%;
+    max-width: 90%;
+    padding-left: 20px;
+  }
+
+  form ul li label {
+    width: 60%;
+    padding-right: 40px;
   }
 
   #submit {
@@ -282,6 +341,7 @@ body a, a:hover, a:visited, a:active {
     border: 1px solid var(--secondary-1-0);
     border-radius: 20px;
     text-shadow: none;
+    width: 95%;
   }
 
   #third_image {
